--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vonat Galéria</title>
+  <title>Mavlesők</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
+
+  <div class="page-bar-top">
+    <a href="index.html" aria-label="Galéria kezdőlap"><img class="logo" src="./kepek/logo.svg" alt="Logo"></a>
+  </div>
 
   <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
     <div class="image-item">
@@ -24,6 +32,7 @@
       <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
     </div>
   </div>
+  <div class="page-bar-bottom"></div>
   <script src="script.js"></script>
 
 </body>
