--- a/vonat1.html
+++ b/vonat1.html
@@ -5,11 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vonat 1</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
+  <div class="page-bar-top">
+    <a href="index.html" aria-label="Galéria kezdőlap"><img class="logo" src="./kepek/logo.svg" alt="Logo"></a>
+  </div>
   <main style="padding:2rem; font-family: sans-serif;">
     <h1>Vonat 1</h1>
     <p>Itt egy részletes oldal a Vonat 1-ről. Vissza: <a href="index.html">Galéria</a></p>
   </main>
+  <div class="page-bar-bottom"></div>
 </body>
 </html>
