--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <a href="index.html" aria-label="Galéria kezdőlap"><img class="logo" src="./kepek/logo.svg" alt="Logo"></a>
   </div>
 
+  <!-- ÚJ: középső csík -->
+
+
   <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
     <div class="image-item">
       <img class="image" src="./kepek/vonat1.svg" alt="Vonat 1" draggable="false" />
       <a class="below-caption" href="vonat1.html">Vonat 1 — rövid leírás vagy link</a>
     </div>
-
+    
     <div class="image-item">
       <img class="image" src="./kepek/vonat2.svg" alt="Vonat 2" draggable="false" />
       <a class="below-caption" href="vonat2.html">Vonat 2 — plusz információ</a>
@@ -32,6 +35,7 @@
       <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
     </div>
   </div>
+  <div class="page-bar-middle" aria-hidden="true"></div>
   <div class="page-bar-bottom"></div>
   <script src="script.js"></script>
 
