--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
       <img class="image" src="./kepek/vonat3.svg" alt="Vonat 3" draggable="false" />
       <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
     </div>
+
+    <div class="image-item">
+      <img class="image" src="./kepek/kissvonat1.svg" alt="Vonat 3" draggable="false" />
+      <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
+    </div>
+
+    <div class="image-item">
+      <img class="image" src="./kepek/kissvonat2.svg" alt="Vonat 3" draggable="false" />
+      <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
+    </div>
   </div>
   <div class="page-bar-middle" aria-hidden="true"></div>
   <div class="page-bar-bottom"></div>
