--- a/vonat1.html
+++ b/vonat1.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vonat 1</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Magyar vonatok — rövid ismertetők</title>
+  <link rel="stylesheet" href="vonat.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,10 +14,60 @@
   <div class="page-bar-top">
     <a href="index.html" aria-label="Galéria kezdőlap"><img class="logo" src="./kepek/logo.svg" alt="Logo"></a>
   </div>
-  <main style="padding:2rem; font-family: sans-serif;">
-    <h1>Vonat 1</h1>
-    <p>Itt egy részletes oldal a Vonat 1-ről. Vissza: <a href="index.html">Galéria</a></p>
-  </main>
-  <div class="page-bar-bottom"></div>
+<div class="wrap">
+<div class="card">
+<header>
+<h1>Magyar vonatok — rövid ismertetők</h1>
+<p class="muted">Összegyűjtve: MÁV 424 "Bivaly", Bzmot, Stadler FLIRT és MÁV KISS.</p>
+<hr>
+</header>
+
+
+<section id="mav-424">
+<h2>MÁV 424 ("Bivaly")</h2>
+<p>A MÁV 424-es sorozatú gőzmozdony, közismert nevén „Bivaly", a magyar vasúttörténet egyik legkiemelkedőbb típusa volt. Gyártása 1924-ben kezdődött meg a budapesti MÁVAG gyárban. Robusztus konstrukciójának köszönhetően széles körben alkalmazható volt, képes volt szinte bármilyen típusú vonat továbbítására.</p>
+<p>Felhasználása nem korlátozódott kizárólag személyszállításra; gyakran beosztották nehéz tehervonatok élére is. Hatalmas kazánja és jellegzetes füstfelhője messziről felismerhetővé tette. A mozdonyvezetők körében megbízhatósága és a hosszú távú üzemeltetésre való alkalmassága miatt nagyra becsülték.</p>
+<p>A „Bivaly" exportra is került, így nemzetközi szinten is ismertté vált. Idővel a magyar vasút egyik ikonikus jelképévé vált. A dízel- és villamos mozdonyok elterjedésével fokozatosan kivonták a forgalomból. Napjainkban számos példánya múzeumokban és nosztalgiavonatokon tekinthető meg.</p>
+<figure>
+<img src="./kepek/424.jpg" alt="">
+<figcaption>Kép forrás: <a href="https://www.facebook.com/groups/nanaspletyka/posts/7732077130247936/" target="_blank" rel="noopener">facebook.com</a></figcaption>
+</figure>
+</section>
+
+
+<section id="bzmot">
+<h2>Bzmot</h2>
+<p>A Bzmot egy könnyű dízelmotorvonat, amelyet elsősorban mellékvonalakon alkalmaznak Magyarországon. Ezen járműveket a Ganz vállalat gyártotta az 1970-es évektől kezdődően. A Bzmot egységek kompakt méretűek és egyszerű szerkezetűek, ami gazdaságos üzemeltetést tesz lehetővé olyan vonalakon, ahol az utasszám alacsony.</p>
+<p>A jármű jellegzetes sárga-vörös festéséről és buszra emlékeztető üvegfelületéről könnyen azonosítható. Belső terében jellemzően egyszerű utastér található, kétoldalt elhelyezett ülésekkel. Hangja: a dízelmotor jellegzetes zúgása és a hajtás hangja messziről hallható.</p>
+<p>Több felújított változata is üzembe állt, újabb ülésekkel és korszerűbb kialakítással. Jelenleg is számos helyen közlekedik, ezért sokak számára a „kis piros" a vidék vasúti közlekedésének ismerős arca.</p>
+<figure>
+<img src="./kepek/Bzmot-268_sp.jpg" alt="">
+<figcaption>Kép forrás: <a href="https://hu.wikipedia.org/wiki/A_Bzmot_motorvonatok_ideiglenes_kivon%C3%A1sa" target="_blank" rel="noopener">Wikipedia</a></figcaption>
+</figure>
+</section>
+
+
+<section id="flirt">
+<h2>Stadler FLIRT</h2>
+<p>A FLIRT motorvonat a magyar vasúti közlekedés egyik legmodernebb és legszélesebb körben alkalmazott személyszállító járműve. Az első egységek 2007-ben érkeztek Magyarországra a svájci Stadler gyártótól. Könnyűszerkezetes felépítése és korszerű elektromos hajtásrendszere kiváló gyorsulást és csendes üzemet biztosít.</p>
+<p>Tágas, légkondicionált utastere, panorámaablakai és alacsonypadlós kialakítása kényelmes utazást és akadálymentes hozzáférést nyújtanak. A FLIRT ideális az elővárosi és regionális forgalomban, és számos régebbi szerelvényt váltott fel.</p>
+<figure>
+<img src="./kepek/1200px-MAV_Stadler.jpg" alt="">
+<figcaption>Kép / forrás: <a href="https://hu.wikipedia.org/wiki/A_Stadler_FLIRT_magyarorsz%C3%A1gi_t%C3%B6rt%C3%A9nete" target="_blank" rel="noopener">Wikipedia — Stadler FLIRT Magyarországi története</a></figcaption>
+</figure>
+</section>
+
+
+<section id="kiss">
+<h2>MÁV KISS (emeletes)</h2>
+<p>A MÁV modern emeletes KISS motorvonatai elsősorban a nagy forgalmú elővárosi vonalakon teljesítenek szolgálatot. A név egy német mozaikszóból ered, mely kényelmes, innovatív gyors elővárosi vonatot jelent. A szerelvények akár 160 km/h sebességre is képesek, és nagy utaskapacitással rendelkeznek az emeletes kialakításnak köszönhetően.</p>
+<p>Az utastér tágas és klimatizált, akadálymentesített részekkel, USB-töltőkkel és modern kijelzőkkel. A csendes futás, LED-világítás és kamerás utastér-felügyelet egységesen növeli az utazás színvonalát és biztonságát.</p>
+<figure>
+<img src="./kepek/Kissprobaszolnok.jpg" alt="">
+<figcaption>Kép forrás: <a href="https://hu.wikipedia.org/wiki/M%C3%81V_815_sorozat" target="_blank" rel="noopener">Wikipedia</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="page-bar-bottom"></div>
 </body>
 </html>
