--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
       <div class="image-item">
         <img class="image" src="./kepek/vonat1.svg" alt="Vonat 1" draggable="false" />
-        <a class="below-caption" href="vonat1.html">Vonat 1 — rövid leírás vagy link</a>
+        <a class="below-caption" href="vonat1.html">Magyar vonatok — rövid ismertetők</a>
       </div>
       <div class="image-item">
-        <img class="image" src="./kepek/vonat2.svg" alt="Vonat 2" draggable="false" />
-        <a class="below-caption" href="vonat2.html">Vonat 2 — plusz információ</a>
-      </div>
-      <div class="image-item">
-        <img class="image" src="./kepek/vonat3.svg" alt="Vonat 3" draggable="false" />
-        <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
+        <img class="image" src="./kepek/vonat3.svg" alt="Vonat 2" draggable="false" />
+        <a class="below-caption" href="vonat2.html">A MÁV késik – ahogy mindig</a>
       </div>
       <div class="image-item">
         <img class="image" src="./kepek/kissvonat1.svg" alt="Kis vonat 1" draggable="false" />
