--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </div>
       <div class="image-item">
         <img class="image" src="./kepek/kissvonat1.svg" alt="Kis vonat 1" draggable="false" />
-        <a class="below-caption" href="vonat4.html">Kis vonat 1</a>
+        <a class="below-caption" href="vonat3.html">Kis vonat 1</a>
       </div>
       <div class="image-item">
         <img class="image" src="./kepek/kissvonat2.svg" alt="Kis vonat 2" draggable="false" />
-        <a class="below-caption" href="vonat5.html">Kis vonat 2</a>
+        <a class="below-caption" href="vonat4.html">Kis vonat 2</a>
       </div>
     </div>
   </div>
@@ -45,23 +45,19 @@
     <div id="image-track-mobile" class="mobile-track" data-prev-percentage="0">
       <div class="mobile-item">
         <a href="vonat1.html"><img src="./kepek/vonat1.svg" alt="Vonat 1" draggable="false" /></a>
-        <a class="below-caption" href="vonat1.html">Vonat 1 — rövid leírás</a>
+        <a class="below-caption" href="vonat1.html">Magyar vonatok — rövid ismertetők</a>
       </div>
       <div class="mobile-item">
-        <a href="vonat2.html"><img src="./kepek/vonat2.svg" alt="Vonat 2" draggable="false" /></a>
-        <a class="below-caption" href="vonat2.html">Vonat 2 — plusz információ</a>
-      </div>
-      <div class="mobile-item">
-        <a href="vonat3.html"><img src="./kepek/vonat3.svg" alt="Vonat 3" draggable="false" /></a>
-        <a class="below-caption" href="vonat3.html">Vonat 3 — további szöveg</a>
+        <a href="vonat2.html"><img src="./kepek/vonat3.svg" alt="Vonat 2" draggable="false" /></a>
+        <a class="below-caption" href="vonat2.html">A MÁV késik – ahogy mindig</a>
       </div>
       <div class="mobile-item">
         <a href="vonat4.html"><img src="./kepek/kissvonat1.svg" alt="Kis vonat 1" draggable="false" /></a>
-        <a class="below-caption" href="vonat4.html">Kis vonat 1</a>
+        <a class="below-caption" href="vonat3.html">Kis vonat 1</a>
       </div>
       <div class="mobile-item">
         <a href="vonat5.html"><img src="./kepek/kissvonat2.svg" alt="Kis vonat 2" draggable="false" /></a>
-        <a class="below-caption" href="vonat5.html">Kis vonat 2</a>
+        <a class="below-caption" href="vonat4.html">Kis vonat 2</a>
       </div>
     </div>
   </div>
