--- a/vonat3.html
+++ b/vonat3.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vonat 3</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Magyar vonatbalesetek – Monorierdő és Herceghalom</title>
+  <link rel="stylesheet" href="vonat.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,10 +14,45 @@
   <div class="page-bar-top">
     <a href="index.html" aria-label="Galéria kezdőlap"><img class="logo" src="./kepek/logo.svg" alt="Logo"></a>
   </div>
-  <main style="padding:2rem; font-family: sans-serif;">
-    <h1>Vonat 3</h1>
-    <p>Itt egy részletes oldal a Vonat 3-ról. Vissza: <a href="index.html">Galéria</a></p>
-  </main>
+
+  <div class="wrap">
+    <div class="card">
+      <header>
+        <h1>Magyar vonatbalesetek – Monorierdő és Herceghalom</h1>
+        <p class="muted">Két tragikus vasúti baleset, amelyek megrázták Magyarországot.</p>
+        <hr>
+      </header>
+
+      <section id="bevezetes">
+        <p>A MÁV már nagyon régóta működik, és naponta több millió ember utazik vele. Az évek során azonban több súlyos vasúti baleset is történt Magyarországon, amelyek mély nyomot hagytak az ország történetében.</p>
+      </section>
+
+      <section id="monorierdo">
+        <h2>A monorierdői vonatbaleset (2008)</h2>
+        <p>Az egyik legismertebb tragédia 2008-ban történt Monorierdőnél, amikor két vonat összeütközött. A balesetben négy ember vesztette életét, és sokan megsérültek. A Pilis vasútállomás felől érkező személyvonat vezérlőkocsija ütközött a Hajdú InterCity vonat utolsó kocsijával. A baleset az egész országot megrázta, és felhívta a figyelmet a vasúti biztonság fontosságára.</p>
+        <figure>
+          <img src="./kepek/vonatbaleset1.jpg" alt="A monorierdői vasúti baleset helyszíne">
+          <figcaption>Forrás: <a href="https://hu.wikipedia.org/wiki/Monorierdői_vasúti_baleset" target="_blank" rel="noopener">Wikipédia – Monorierdői vasúti baleset</a></figcaption>
+        </figure>
+      </section>
+
+      <section id="herceghalom">
+        <h2>A herceghalmi vonatbaleset (1968)</h2>
+        <p>Egy másik súlyos vasúti tragédia 1968. december 19-én történt Herceghalomnál, amikor két gyorsvonat ütközött össze. Az egyik mozdonyvezető nem vette észre a piros jelzést a rossz látási viszonyok miatt, és nem tudta időben megállítani a vonatot. A balesetben 43 ember meghalt, sokan pedig kórházba kerültek. Ez a magyar vasúttörténet egyik legmegrázóbb balesete volt.</p>
+        <figure>
+          <img src="./kepek/vonatbaleset2.jpg" alt="Herceghalmi vonatbaleset roncsai">
+          <figcaption>Kép: Szétszóródott roncsok Herceghalmon<br>Forrás: <a href="https://hu.wikipedia.org/wiki/Herceghalmi_vasúti_baleset" target="_blank" rel="noopener">Wikipédia – Herceghalmi vasúti baleset</a></figcaption>
+        </figure>
+      </section>
+
+      <section id="osszegzes">
+        <h2>Tanulságok</h2>
+        <p>Ma már sokkal modernebbek a vonatok és az irányítórendszerek, de továbbra is kulcsfontosságú, hogy minden dolgozó teljes odafigyeléssel végezze a munkáját. Ezek a tragédiák emlékeztetnek arra, hogy a vasúti közlekedésben egy apró hiba is súlyos következményekkel járhat. A múlt tapasztalataiból tanulva ma biztonságosabban utazhatunk, de a felelősség közös – minden egyes utazás alkalmával.</p>
+      </section>
+
+    </div>
+  </div>
+
   <div class="page-bar-bottom"></div>
 </body>
 </html>
