--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="image-item">
         <img class="image" src="./kepek/kissvonat2.svg" alt="Kis vonat 2" draggable="false" />
-        <a class="below-caption" href="vonat4.html">A vonatok történelme<
+        <a class="below-caption" href="vonat4.html">A vonatok történelme</a>
       </div>
     </div>
   </div>
