--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="mobile-item">
         <a href="vonat4.html"><img src="./kepek/kissvonat1.svg" alt="Kis vonat 1" draggable="false" /></a>
-        <a class="below-caption" href="vonat3.html">Magyar vonatbalesetek – Monorierdő és Herceghalom</a>
+        <a class="below-caption" href="vonat3.html">Magyar vonatbalesetek</a>
       </div>
       <div class="mobile-item">
         <a href="vonat5.html"><img src="./kepek/kissvonat2.svg" alt="Kis vonat 2" draggable="false" /></a>
