--- a/vonat5.html
+++ b/vonat5.html
@@ -32,7 +32,7 @@
       <section id="azsia">
         <h2>Megalakul a Pán-ázsiai Gazdasági Koalíció</h2>
         <p>Több ázsiai ország összefogásával megalakult a Pán-ázsiai Gazdasági Koalíció, amely célul tűzte ki egy egész Ázsiát behálózó, nagysebességű vasúti rendszer létrehozását. A kezdeményezés célja a kontinens gazdasági együttműködésének erősítése, a kereskedelem felgyorsítása és a közlekedési kapcsolatok modernizálása. A projekt várhatóan jelentősen fellendíti majd a részt vevő országok gazdaságát.</p>
-        <p class="muted">Forrás: Nemzetközi hírszolgálatok</p>
+        <p class="muted">Forrás: Napi Blöff</p>
       </section>
 
       <footer>
